CHANGES
=======

* Add case type support
* Add support for properties

0.0.4
-----

* Add User support

0.0.3
-----

* Add get\_project support and bug fixes
* Update encrypted deploy password

0.0.2
-----

* Add Client, API, and Sessions
* Add project model and tests
* Add method support for singledispatch
* Update docstrings and help() messages
* Update README copy
* Add credential setting logic
* Add API paths to constants file
* Add initial project structure
* Initial commit