@@ -20,9 +20,11 @@ Note that this project is currently in alpha: APIs can and will change without w
 Currently supported functionality:
 
 - Use credentials from Client instantiation, ENV vars, or configuration file
+- case types - (get all)
 - priorities - (get all)
 - project - (get_by_id)
 - projects - (get all)
+- statuses - (get all)
 - user - (get_by_id, get_by_email)
 - users - (get all)
 
