@@ -1,6 +1,7 @@
 from .case_type import CaseType
 from .priority import Priority
 from .project import Project
+from .status import Status
 from .user import User
 
-__all__ = ['CaseType', 'Priority', 'Project', 'User']
+__all__ = ['CaseType', 'Priority', 'Project', 'Status', 'User']
